# testgl

./: CMakeLists.txt  main.cpp  main.cpp.old  vertex.glsl
src/mathfunc/: main.cpp
src/triangle/: main.cpp
